Overflow: hidden to workaround an Opera bug with max-height

--- a/sass/modules/views/_view-services-on-title-page.sass
+++ b/sass/modules/views/_view-services-on-title-page.sass
@@ -11,6 +11,7 @@
     border-radius:    1em
     padding:          1em
     margin-bottom:    $vertical-margin
+    overflow:         hidden
 
     text-align: center
 
